// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The HeroListFeatures component should render 1`] = `
<View
  cardPadding={false}
  style={
    Object {
      "paddingHorizontal": 16,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
</View>
`;

exports[`The HeroListFeatures component should render a button for onPressActionListButton 1`] = `
<View
  cardPadding={false}
  style={
    Object {
      "paddingHorizontal": 16,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>
</View>
`;

exports[`The HeroListFeatures component should render a loading state for isLoading 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 14,
          "marginVertical": 3.5,
          "width": "60%",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 24,
          "marginVertical": 1.8000000000000007,
          "width": "100%",
        }
      }
    />
  </View>,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      cardColor="#00676D"
      isLoading={true}
      style={
        Object {
          "backgroundColor": "#00676D",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <Image
            fadeDuration={250}
            isLoading={true}
            onLoad={[Function]}
            source={Array []}
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#A5A5A5",
                "resizeMode": "cover",
                "width": "100%",
              }
            }
          />
          <BVLinearGradient
            colors={
              Array [
                1711276032,
                2147483648,
              ]
            }
            endPoint={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            overlayColor="#000000"
            overlayType="gradient-bottom"
            startPoint={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "bottom": 0,
              "paddingBottom": 32,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View
            hasSummary={false}
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "paddingTop": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#A5A5A5",
                    "borderRadius": 16,
                    "height": 24,
                    "marginVertical": 1.8000000000000007,
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`The HeroListFeatures component should render with a subtitle 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      This renders larger than you might expect
    </Text>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`The HeroListFeatures component should render with a title 1`] = `
Array [
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 16,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "#A5A5A5",
          "fontFamily": "InterUI-Medium",
          "fontSize": 14,
          "lineHeight": 21,
        }
      }
    >
      This renders smaller than its name would suggest
    </Text>
  </View>,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Boom
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          What
        </Text>
      </View>
    </View>
  </View>,
]
`;
